--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="ru" class="h-100">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title></title>
   </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
+  <body class="d-flex flex-column h-100">
+    <div id="app" class="d-flex flex-column h-100">
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
